# SubterraneanRose

./: .gitignore  CMakeLists.txt  README.en.md  README.md  README.zh-CN.md  README.zh-Hans.md
locale/: CMakeLists.txt
locale/C/: C.xml
locale/en/: en.xml  language.txt
locale/en-US/: en-US.xml
locale/en-US/console/: options.txt
locale/en-US/ui/: about.txt  conwin.txt  editor.txt
locale/en/console/: options.txt
locale/en/ui/: cfgpanel.txt  common.txt  editor.txt  mainmenu.txt  ui.txt
locale/zh-CN/: language.txt  zh-CN.xml
locale/zh-CN/console/: options.txt
locale/zh-CN/ui/: about.txt  cfgpanel.txt  common.txt  conwin.txt  editor.txt  mainmenu.txt  ui.txt
source/: CMakeLists.txt  initialize.cpp  initialize.hpp  main.c  main.cpp  maincli.cpp  maincli.hpp  subsystem.c  verinfo.rc.in  video.cpp  video.hpp
source/audio/: CMakeLists.txt
source/audio/src/: audio.cpp  aumgr.cpp  demo.cpp  demo.hpp
source/console/: CMakeLists.txt
source/console/src/: buildinfo.cpp  buildinfo.hpp  cmdline.cpp  mswin.cpp  mswin.hpp  progopt.cpp
source/core/: CMakeLists.txt
source/core/include/glad/: glad.h
source/core/src/: args.c  args.cpp  git_info.c.in  git_info.cpp.in  init.c  init.cpp  version_info.c  version_info.cpp
source/editor/: CMakeLists.txt
source/editor/src/: project.cpp
source/editor/test/: CMakeLists.txt
source/editor/test/project_test/: CMakeLists.txt  project_test.cpp
source/ext/: CMakeLists.txt
source/ext/stb/: compile_stb.c
source/fs/: CMakeLists.txt
source/fs/src/: common.cpp  fontfile.cpp  platform.cpp
source/gpu/: CMakeLists.txt
source/gpu/opengl3/: CMakeLists.txt
source/gpu/opengl3/src/: buffer.cpp  demo.cpp  demo.hpp  effect.cpp  gl_assert.h  render_system.cpp  render_system.hpp  renderer.cpp  scene.cpp  shader.cpp  texture.cpp
source/gpu/src/: image.cpp  renderer.cpp  scene.cpp  sprite.cpp
source/graphic/: CMakeLists.txt
source/graphic/src/: image.cpp  renderer.cpp  sprite.cpp
source/headers/: CMakeLists.txt
source/headers/test/funcqueue_test/: CMakeLists.txt
source/headers/test/semver_test/: CMakeLists.txt  semver_test.cpp
source/headers/test/string_tree/: string_tree_test.cpp
source/headers/test/string_tree_test/: CMakeLists.txt
source/headers/test/tracker_test/: CMakeLists.txt  tracker_test.cpp
source/i18n/: CMakeLists.txt
source/i18n/src/: embedded_C.cpp.in  i18n.cpp
source/imguisr/: CMakeLists.txt
source/imguisr/include/: imgui_ini.hpp  imguisr.h
source/imguisr/src/: imgui_ini.cpp  imguisr.cpp
source/imguisr/src/filebrowser/: filebrowser.cpp  filebrowser_imgui.cpp  filebrowser_imgui.hpp  filebrowser_win32.cpp  filebrowser_win32.hpp
source/locale/: CMakeLists.txt
source/locale/src/: language.cpp  locale.cpp  parser.cpp
source/locale/src/v1/: actionblock.cpp  actionblock.hpp  infoblock.cpp  infoblock.hpp  textblock.cpp  textblock.hpp
source/locale/test/: CMakeLists.txt
source/locale/test/language_test/: CMakeLists.txt  language_test.cpp
source/locale/test/parser_test/: CMakeLists.txt  parser_test.cpp
source/opengl3/: CMakeLists.txt
source/opengl3/src/: buffer.cpp  demo.cpp  demo.hpp  effect.cpp  gl_assert.h  render_system.cpp  render_system.hpp  renderer.cpp  shader.cpp  texture.cpp
source/player/: CMakeLists.txt
source/player/src/: demo.cpp  demo.hpp  entity.cpp  entry.c  entry.cpp  entry_windows.c  main_loop.c  main_loop.cpp  main_loop.h  main_loop.hpp  player.cpp  stage.cpp  world.cpp
source/player/src/component/: component.cpp
source/player/src/entity/: entity.cpp
source/player/src/system/: system.cpp
source/player/test/: CMakeLIsts.txt
source/player/test/ecs_test/: CMakeLists.txt  ecs_test.cpp
source/progopt/: CMakeLists.txt
source/progopt/src/: buildinfo.cpp  buildinfo.hpp  cmdline.cpp  win32_console.cpp  win32_console.hpp
source/res/: CMakeLists.txt
source/res/src/: resmgr.cpp  vfs.cpp
source/res/test/vfs_test/: CMakeLists.txt  test.txt  vfs_test.cpp
source/srose/: CMakeLists.txt
source/srose/src/: app.cpp  user.cpp
source/srose/test/: CMakeLists.txt
source/srose/test/profile_test/: CMakeLists.txt  profile_test.cpp
source/srtl/: CMakeLists.txt
source/srtl/include/srtl/: stralgo.hpp  string_comparator.hpp  string_tree.hpp  string_tree_fwd.hpp
source/srtl/test/stralgo_test/: CMakeLists.txt  stralgo_test.cpp
source/srtl/test/string_tree_test/: CMakeLists.txt  string_tree_test.cpp
source/sys/: CMakeLists.txt
source/sys/src/: glad.c  init.c  version_info.c
source/trace/: CMakeLists.txt
source/trace/src/: log.cpp  trace.cpp
source/ui/: CMakeLists.txt
source/ui/include/: imguisr.h
source/ui/src/: entry.cpp  imguisr.cpp  initialize.cpp  initialize.hpp  main_loop.cpp  main_loop.hpp  node.cpp  uimgr.cpp  widget.cpp
source/ui/src/console/: buildinfo.cpp  buildinfo.hpp  cmdline.cpp  mswin.cpp  mswin.hpp  progopt.cpp
source/ui/src/debug/: debug_ui.cpp  debug_ui.hpp
source/ui/src/editor/: editor_state.cpp  editor_state.hpp  editor_window.cpp  editor_window.hpp  impl.cpp  impl.hpp  srlc_editor.cpp  state.cpp  state.hpp  welcome.cpp  welcome.hpp  window.cpp  window.hpp
source/ui/src/gui/: about.cpp  about.hpp  configmenu.cpp  configmenu.hpp  conwin.cpp  conwin.hpp  mainmenu.cpp  mainmenu.hpp  uimgr.cpp  uimgr.hpp  widget.cpp  widget.hpp
source/ui/src/i18n/: embedded_en.cpp.in  i18n.cpp  i18n.hpp
source/ui/src/main_menu/: main_menu_bar.cpp  main_menu_bar.hpp
source/ui/src/menu/: about.cpp  about.hpp  configmenu.cpp  configmenu.hpp  conwin.hpp  mainmenu.cpp  mainmenu.hpp
source/ui/test/: CMakeLists.txt
source/ui/test/node_test/: CMakeLists.txt  node_test.cpp
source/ui/test/property_test/: CMakeLists.txt  (+1 more)
source/util/: CMakeLists.txt
source/util/src/: open_in_browser.c  open_in_browser.cpp  program_name.c  program_name.cpp  shell.cpp  system.cpp
source/util/stb/: compile_stb.c
source/util/test/: CMakeLists.txt
source/wm/: CMakeLists.txt  README.zh-CN.md
source/wm/imguisr/: CMakeLists.txt
source/wm/src/: display.c  display.cpp  event.cpp  event_handler.cpp  imgui_sdl.cpp  input.cpp  window.cpp  winmgr.cpp
(+178 files in other folders)
