# SubterraneanRose Trace Module

aux_source_directory(./src trace_src_list)

add_library("srose-trace" STATIC ${trace_src_list})
target_include_directories("srose-trace" PUBLIC ./include)
if(WIN32)
    find_package(Boost REQUIRED COMPONENTS stacktrace_windbg)
    target_link_libraries("srose-trace" PUBLIC Boost::stacktrace_windbg)
    target_link_libraries("srose-trace" PRIVATE ole32 dbgeng)
else()
    find_package(Boost REQUIRED COMPONENTS 	stacktrace_basic)
    target_link_libraries("srose-trace" PUBLIC Boost::stacktrace_basic)
    target_link_libraries("srose-trace" PRIVATE dl)
endif()
find_package(Boost REQUIRED COMPONENTS log log_setup)
if(CMAKE_COMPILER_IS_GNUCXX AND NOT ${Boost_USE_STATIC_LIBS})
    target_compile_definitions("srose-trace" PUBLIC BOOST_LOG_DYN_LINK=1)
endif()
target_link_libraries("srose-trace" PUBLIC Boost::log Boost::log_setup)
target_link_libraries("srose-trace" PRIVATE fmt)
target_link_libraries("srose-trace" PRIVATE "srose-core")
target_link_libraries("srose-trace" PRIVATE "srose-fs")
